# AbstarctML

./: .gitignore  README.md  RULES.md  Untitled  main.py  manual.py  pyproject.toml
Core/: __init__.py  spinner.py
Data/: __init__.py  dataset.py  eda.py  featureEngineering.py  preprocessing.py  utils.py
Evaluation/: __init__.py  evaluation.py  utils.py
Models/: __init__.py  models.py  utils.py
