[project]
name = "abstractml"
version = "0.1.0"
description = "General abstract ML utilities for datasets, models, metrics, tuning, workflows, and statistical analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "optuna>=4.0.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "setfit>=1.1.3",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.10.1",
]
